--- a/css/main.css
+++ b/css/main.css
@@ -1,5 +1,21 @@
 /* Hint! the @font-face rule needs to be the first thing in your CSS file!*/
+@font-face {
+    font-family: '20_dbregular';
+    src: url('../fonts/20db-webfont.woff2') format('woff2'),
+         url('../fonts/20db-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
 
+}
+
+@font-face {
+    font-family: 'source_sans_proregular';
+    src: url('../fonts/sourcesanspro-regular-webfont.woff2') format('woff2'),
+         url('../fonts/sourcesanspro-regular-webfont.woff') format('woff');
+    font-weight: normal;
+    font-style: normal;
+
+}
 
 /* Start the CSS*/
 body {
@@ -22,29 +38,36 @@ body {
 }
 
 h1 {
-
+	font-family: 'source_sans_proregular', sans-serif;
 }
 
 h2 {
+	font-family: 'source_sans_proregular', sans-serif;
+}
 
 }
 
 h3 {
+	font-family: 'source_sans_proregular', sans-serif;
 
 }
 
 h4 {
+	font-family: 'source_sans_proregular', sans-serif;
 
 }
 
 h5 {
+	font-family: 'source_sans_proregular', sans-serif;
 
 }
 
 h6 {
+	font-family: 'source_sans_proregular', sans-serif;
 
 }
 
 p {
+	font-family: 'source_sans_proregular', sans-serif;
 
 }
